* commit 0bf1616ac88f85aac1a9e84fc7d4bbeb737375b3
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Aug 31 16:22:42 2015 -0400
| 
|     small change in readme...
|  
* commit ed800efcff96b72880ba5a95f27b68f1ac56aca4
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Aug 31 16:15:02 2015 -0400
| 
|     Added to the EXTRA_DIST variable in Makefile.am; also removed a debugging statement in ggadt.f90.in.
|  
* commit 04d614b988820b72391fed495259a0d7957b5cfc
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Aug 31 15:21:14 2015 -0400
| 
|     Added pdf manual. Changed src/Makefile.am to remove the \*-local instructions; this was messing everything up because data_dir is not set by configure anymore (check this?)
|  
* commit c96c061e2960ab74b421032e166b2c9b1f665e8b
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Aug 31 14:49:13 2015 -0400
| 
|     cleaned up directory somewhat
|  
* commit 45644cb187d18d8a5081dbf82fa04f63ec9aa767
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Aug 31 14:45:33 2015 -0400
| 
|     oops...accidentally committed after compilation
|  
* commit 7597e52e5b2b872bdb76f7d5a9a3bfb38d5c632c
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Aug 31 14:44:16 2015 -0400
| 
|     Added data file to gitignore
|  
* commit 52468cdfa32661af491c0d9761dec9f52bad2746
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Aug 31 14:43:07 2015 -0400
| 
|     added bash scripts to gitignore
|  
* commit 431457ad4d051940490082ba16f0c91f2badf7e8
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Aug 31 11:11:08 2015 -0400
| 
|     Updated documentation; I also added some comments to the ggadt.f90 file. NEW SPHINX DOCUMENTATION. Don't need the problematic doc/ folder, so I added it to gitignore. I'll put a pdf manual in the parent directory.
|  
* commit 44dabdbf5a1bad525275b630ed3293c7ae553f12
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Thu Aug 27 14:10:46 2015 -0400
| 